--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,5 @@
 <h1><%= @post.title %></h1>
 <p><%= @post.description %></p>
+
+<%= link_to "All Posts", posts_path %><br>
+<%= link_to "Edit Post", edit_post_path(@post) %>
